[gd_scene load_steps=11 format=3 uid="uid://i0wct16b8g5y"]

[ext_resource type="PackedScene" uid="uid://b4fg85m5t4wuw" path="res://actors/models/character_exercise_01_2024_01_06.glb" id="1_gjkax"]
[ext_resource type="Script" path="res://actors/models/humanoid_model.gd" id="2_tbpui"]
[ext_resource type="PackedScene" uid="uid://b11i612qmwnqp" path="res://actors/models/weapon_gauntlet.tscn" id="3_4e873"]
[ext_resource type="PackedScene" uid="uid://seggs0vb84xb" path="res://actors/models/limb_model.tscn" id="3_kulp1"]
[ext_resource type="Script" path="res://actors/models/hurtbox.gd" id="5_ccxe5"]
[ext_resource type="Script" path="res://game/interactions/hit_info.gd" id="6_u6dvx"]

[sub_resource type="SphereMesh" id="SphereMesh_jjqjs"]
radius = 0.15
height = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_i3fwk"]
radius = 0.8

[sub_resource type="SphereShape3D" id="SphereShape3D_xdrfl"]
radius = 0.8

[sub_resource type="SphereShape3D" id="SphereShape3D_5edag"]
radius = 0.6

[node name="character_exercise_01_2024_01_06" instance=ExtResource("1_gjkax")]
script = ExtResource("2_tbpui")

[node name="GeneralSkeleton" parent="Armature" index="0"]
bones/0/position = Vector3(0.122653, 0.964085, 0.294489)
bones/0/rotation = Quaternion(-0.195285, 0.616321, -0.200044, 0.736203)
bones/0/scale = Vector3(1, 1, 1)
bones/1/rotation = Quaternion(0.686973, 0.28779, 0.632794, -0.211698)
bones/1/scale = Vector3(1, 1, 1)
bones/2/rotation = Quaternion(-0.0674257, -0.129995, 0.0108454, 0.98916)
bones/3/rotation = Quaternion(-0.0136653, 0.000708415, 0.182434, 0.983123)
bones/4/rotation = Quaternion(0.754772, 0.653055, 0.0619548, -1.26319e-07)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(0.199879, 0.043891, -0.00896287, 0.978796)
bones/6/rotation = Quaternion(0.0324898, 7.028e-08, 1.55215e-08, 0.999472)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.221473, -5.7928e-10, -1.12581e-07, 0.975166)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.0355527, -0.136195, -0.779216, 0.610745)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.0686661, 0.300081, -0.394113, 0.865974)
bones/10/rotation = Quaternion(0.450161, 1.08965e-07, 0.121815, 0.884599)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(0.0735652, 3.61306e-08, 0.019907, 0.997092)
bones/13/rotation = Quaternion(0.0355524, 0.136195, 0.779216, 0.610745)
bones/14/rotation = Quaternion(-0.094889, 0.101728, 0.37005, 0.918537)
bones/15/rotation = Quaternion(0.151258, -1.28057e-07, -0.0409308, 0.987647)
bones/15/scale = Vector3(1, 1, 1)
bones/16/rotation = Quaternion(0.0735652, -8.99899e-08, -0.019907, 0.997092)
bones/17/rotation = Quaternion(0.392523, -0.50784, -0.452982, 0.618735)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(-0.627579, 0.305583, 0.691741, 0.185091)
bones/18/scale = Vector3(1, 1, 1)
bones/19/rotation = Quaternion(0.132254, -0.05492, -0.0839797, 0.986124)
bones/19/scale = Vector3(1, 1, 1)
bones/20/rotation = Quaternion(-0.000185045, -0.000720496, -0.00247006, 0.999997)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.857841, -0.51305, -0.016984, 0.0244969)
bones/22/position = Vector3(0.753783, 0.34195, 0.18011)
bones/23/position = Vector3(-0.253344, 0.746924, -0.744726)
bones/23/scale = Vector3(1, 1, 1)
bones/24/position = Vector3(0.117419, 4.63255e-05, 0.316124)
bones/25/position = Vector3(0.299295, 0.700574, 0.10948)
bones/26/position = Vector3(1.54395, 0.801324, 0.195353)
bones/26/rotation = Quaternion(-0.476351, 0.513625, 0.570268, -0.429038)
bones/27/position = Vector3(-0.669681, 0.887521, 1.39541)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(0.0324277, 0.867136, 1.2765)
bones/29/position = Vector3(0.142712, 1.14783, 0.775007)

[node name="meshes" type="Node3D" parent="." index="2"]

[node name="MidBack" type="BoneAttachment3D" parent="meshes" index="0"]
transform = Transform3D(0.160262, 0.0538306, 0.985605, -0.535263, 0.843692, 0.0409553, -0.829343, -0.534121, 0.164025, 0.122653, 0.964085, 0.294489)
bone_name = "MidBack"
bone_idx = 0
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model2" parent="meshes/MidBack" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.076905, 0, 0, 0, 0.341807, 0, 0, 0, 0.0922751, 0.0114918, 0.134764, 0.000793076)
skeleton = NodePath("../../UpperLeg_R")

[node name="UpperLeg_R" type="BoneAttachment3D" parent="meshes" index="1"]
transform = Transform3D(-0.990407, -0.124136, 0.0606971, 0.0632214, -0.0164934, 0.997863, -0.12287, 0.992128, 0.0241834, 0.131016, 0.880008, 0.503645)
bone_name = "UpperLeg.R"
bone_idx = 19
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model" parent="meshes/UpperLeg_R" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.076905, 0, 0, 0, 0.341807, 0, 0, 0, 0.0922751, -5.92813e-09, 0.18461, 2.88516e-09)

[node name="LowerLeg_R" type="BoneAttachment3D" parent="meshes" index="2"]
transform = Transform3D(-0.989693, -0.12905, 0.0620769, 0.0647408, -0.0165466, 0.997765, -0.127734, 0.9915, 0.024731, 0.0824331, 0.873553, 0.891928)
bone_name = "LowerLeg.R"
bone_idx = 20
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model" parent="meshes/LowerLeg_R" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.0996622, 0, 0, 0, 0.333452, 0, 0, 0, 0.0996622, 8.3545e-09, 0.185774, 0)

[node name="UpperLeg_L" type="BoneAttachment3D" parent="meshes" index="3"]
transform = Transform3D(0.973024, 0.126927, -0.192648, 0.125433, -0.991901, -0.0199815, -0.193624, -0.00472215, -0.981064, 0.149596, 0.740329, 0.284882)
bone_name = "UpperLeg.L"
bone_idx = 2
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model2" parent="meshes/UpperLeg_L" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.076905, 0, 0, 0, 0.341807, 0, 0, 0, 0.0922751, 0, 0.183369, 9.61719e-10)
skeleton = NodePath("../../UpperLeg_R")

[node name="LowerLeg_L" type="BoneAttachment3D" parent="meshes" index="4"]
transform = Transform3D(0.955011, -0.225494, -0.192629, -0.238574, -0.96997, -0.0473329, -0.176171, 0.0911595, -0.980129, 0.199271, 0.352135, 0.283034)
bone_name = "LowerLeg.L"
bone_idx = 3
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model" parent="meshes/LowerLeg_L" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.0996622, 0, 0, 9.31323e-10, 0.333452, -3.7835e-10, 1.16415e-10, -1.74623e-10, 0.0996622, -2.98023e-08, 0.187242, 7.45058e-09)

[node name="UpperNeck" type="BoneAttachment3D" parent="meshes" index="5"]
transform = Transform3D(0.0714035, 0.0749523, 0.994627, -0.53678, 0.84335, -0.0250177, -0.840695, -0.532109, 0.100451, 0.209491, 1.34561, 0.0582656)
bone_name = "UpperNeck"
bone_idx = 7
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="MeshInstance3D" type="MeshInstance3D" parent="meshes/UpperNeck" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.65661e-10, 0.151682, 0)
mesh = SubResource("SphereMesh_jjqjs")

[node name="arm_upper_l" type="BoneAttachment3D" parent="meshes" index="6"]
transform = Transform3D(-0.829608, -0.218837, 0.513673, 0.200929, -0.975368, -0.0910211, 0.52094, 0.0276996, 0.853144, 0.23092, 1.14497, -0.0575405)
bone_name = "Arm.Upper.L"
bone_idx = 9
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model" parent="meshes/arm_upper_l" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.1, 0, 0, 0, 0.302256, 0, 0, 0, 0.1, 1.11759e-09, 0.13484, -7.45058e-10)

[node name="arm_upper_r" type="BoneAttachment3D" parent="meshes" index="7"]
transform = Transform3D(0.0152191, -0.260992, 0.965221, 0.892758, -0.431172, -0.130664, 0.450279, 0.863698, 0.226441, 0.201418, 1.36675, 0.289809)
bone_name = "Arm.Upper.R"
bone_idx = 14
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model" parent="meshes/arm_upper_r" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.1, 0, 0, 0, 0.302256, 0, 0, 0, 0.1, 1.11759e-09, 0.13484, -7.45058e-10)

[node name="arm_lower_l" type="BoneAttachment3D" parent="meshes" index="8"]
transform = Transform3D(-0.795814, 0.464245, 0.388788, -0.0252234, -0.666908, 0.744713, 0.605015, 0.582846, 0.542445, 0.172181, 0.883171, -0.0501057)
bone_name = "Arm.Lower.L"
bone_idx = 10
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model" parent="meshes/arm_lower_l" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.1, 0, 0, 0, 0.25, 0, 0, 0, 0.1, 1.11759e-09, 0.13484, -7.45058e-10)

[node name="arm_upper_r2" type="BoneAttachment3D" parent="meshes" index="9"]
transform = Transform3D(0.0243181, 0.0414426, 0.998845, 0.926245, -0.376857, -0.00691483, 0.376136, 0.925343, -0.0475506, 0.131365, 1.25102, 0.521635)
bone_name = "Arm.Lower.R"
bone_idx = 15
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="limb_model" parent="meshes/arm_upper_r2" index="0" instance=ExtResource("3_kulp1")]
transform = Transform3D(0.1, 0, 0, 0, 0.25, 0, 0, 0, 0.1, 1.11759e-09, 0.13484, -7.45058e-10)

[node name="hand_l" type="BoneAttachment3D" parent="meshes" index="10"]
transform = Transform3D(-0.775615, 0.54748, 0.314143, -0.0494972, -0.548909, 0.834415, 0.629263, 0.631635, 0.452841, 0.299298, 0.700563, 0.109486)
bone_name = "Hand.L"
bone_idx = 11
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="weapon_gauntlet" parent="meshes/hand_l" index="0" instance=ExtResource("3_4e873")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 1.49012e-08, 0, 1, 0, 0.103306, 7.45058e-09)

[node name="hand_r" type="BoneAttachment3D" parent="meshes" index="11"]
transform = Transform3D(0.0197283, 0.18846, 0.981882, 0.940492, -0.336724, 0.0457329, 0.339243, 0.92255, -0.183888, 0.142712, 1.14783, 0.775007)
bone_name = "Hand.R"
bone_idx = 16
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="weapon_gauntlet" parent="meshes/hand_r" index="0" instance=ExtResource("3_4e873")]
transform = Transform3D(1, 0, -1.49012e-08, 0, 1, 0, 1.49012e-08, 0, 1, 1.11759e-08, 0.134162, 2.11876e-08)
skeleton = NodePath("../../arm_upper_l")

[node name="hitboxes" type="Node3D" parent="." index="3"]

[node name="hand_l" type="BoneAttachment3D" parent="hitboxes" index="0"]
transform = Transform3D(-0.775615, 0.54748, 0.314143, -0.0494972, -0.548909, 0.834415, 0.629263, 0.631635, 0.452841, 0.299298, 0.700563, 0.109486)
bone_name = "Hand.L"
bone_idx = 11
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="Area3D" type="Area3D" parent="hitboxes/hand_l" index="0"]
collision_layer = 16
collision_mask = 8
script = ExtResource("5_ccxe5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitboxes/hand_l/Area3D" index="0"]
shape = SubResource("SphereShape3D_i3fwk")

[node name="foot_l" type="BoneAttachment3D" parent="hitboxes" index="1"]
transform = Transform3D(-0.107219, 0.959033, 0.262219, -0.993886, -0.0963968, -0.0538327, -0.0263504, -0.266388, 0.963506, 0.117419, 4.64022e-05, 0.316124)
bone_name = "Foot.L"
bone_idx = 4
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="Area3D" type="Area3D" parent="hitboxes/foot_l" index="0"]
collision_layer = 16
collision_mask = 8
script = ExtResource("5_ccxe5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitboxes/foot_l/Area3D" index="0"]
shape = SubResource("SphereShape3D_i3fwk")
disabled = true

[node name="foot_r" type="BoneAttachment3D" parent="hitboxes" index="2"]
transform = Transform3D(-0.354655, 0.934983, -0.00507591, 0.041206, 0.0102061, -0.999098, -0.934088, -0.354545, -0.0421468, 0.0355894, 0.867547, 1.25183)
bone_name = "Foot.R"
bone_idx = 21
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="Area3D" type="Area3D" parent="hitboxes/foot_r" index="0"]
collision_layer = 16
collision_mask = 8
script = ExtResource("5_ccxe5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitboxes/foot_r/Area3D" index="0"]
shape = SubResource("SphereShape3D_xdrfl")

[node name="hand_r" type="BoneAttachment3D" parent="hitboxes" index="3"]
transform = Transform3D(0.0197283, 0.18846, 0.981882, 0.940492, -0.336724, 0.0457329, 0.339243, 0.92255, -0.183888, 0.142712, 1.14783, 0.775007)
bone_name = "Hand.R"
bone_idx = 16
use_external_skeleton = true
external_skeleton = NodePath("../../Armature/GeneralSkeleton")

[node name="Area3D" type="Area3D" parent="hitboxes/hand_r" index="0"]
collision_layer = 16
collision_mask = 8
script = ExtResource("5_ccxe5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitboxes/hand_r/Area3D" index="0"]
shape = SubResource("SphereShape3D_5edag")

[node name="HitInfo" type="Node" parent="." index="4"]
script = ExtResource("6_u6dvx")
